# goto-music

./: .gitignore  LICENSE  README.md  plan.txt  requirements.txt
backend/: audio_only.m4a  audio_only.webm  collect.py  db_update.py  find_peaks.py  fingerprint.py  handle_request.py  match_fingerprint.py  match_peaks.py  music_video.m4a  scrape.py  search_tree.py  songs.out
backend/kdtree/: .gitignore  CMakeLists.txt  Makefile  module.c  temp.c
backend/kdtree/include/: debug.h  types.h
backend/kdtree/src/: debug.c  module.c
plugin/: content.js  manifest.json  popup.html  popup.js
